[gd_scene load_steps=10 format=3 uid="uid://b6d1eg7ckaf5o"]

[ext_resource type="PackedScene" uid="uid://u4w5m3it5vpr" path="res://models/terminal_w_screen.glb" id="1_h5vuh"]
[ext_resource type="FontFile" uid="uid://bhx0bwnbe77ci" path="res://fonts/Modeseven-L3n5.ttf" id="2_mfid3"]
[ext_resource type="Script" uid="uid://cbvsey6e6vuoi" path="res://scripts/island_terminal.gd" id="2_qg4x0"]
[ext_resource type="Shader" uid="uid://cy13piga0wv5n" path="res://materials/CRT.gdshader" id="3_ugwvq"]
[ext_resource type="Script" uid="uid://bnuniyrqoyyvp" path="res://scripts/Interactable.gd" id="4_fsi3j"]

[sub_resource type="ViewportTexture" id="ViewportTexture_xv2cq"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0osfw"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_xv2cq")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.05

[sub_resource type="Theme" id="Theme_5sy7i"]
default_base_scale = 1.0
default_font = ExtResource("2_mfid3")
default_font_size = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kpf10"]
shader = ExtResource("3_ugwvq")

[node name="terminal_w_screen" instance=ExtResource("1_h5vuh")]
script = ExtResource("2_qg4x0")

[node name="Cube" parent="." index="0"]
transform = Transform3D(0.2, 0, 0, 0, 0.02, 0, 0, 0, 0.2, 0, 0, 0)

[node name="StaticBody3D" parent="Cube" index="0"]
collision_layer = 33
script = ExtResource("4_fsi3j")
interact_text = "Terminal"

[node name="Plane" parent="." index="1"]
transform = Transform3D(0.2, 0, 0, 0, 0.0792129, -0.191244, 0, 0.191244, 0.0792129, 0, 0.780362, 0.0744154)
material_override = SubResource("StandardMaterial3D_0osfw")

[node name="SubViewport" type="SubViewport" parent="." index="2"]
disable_3d = true

[node name="ColorRect2" type="ColorRect" parent="SubViewport" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0747591, 0.0651024, 0.0251987, 1)

[node name="MarginContainer2" type="MarginContainer" parent="SubViewport" index="1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VSplitContainer" type="VSplitContainer" parent="SubViewport/MarginContainer2" index="0"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RichTextLabel" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer" index="0"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "#===============================#
#	Island Information System	#
#===============================#"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/MarginContainer2/VSplitContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_TIME"
fit_content = true
autowrap_mode = 0

[node name="TimeLabel" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer2" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_TEMPERATURE"
fit_content = true
autowrap_mode = 0

[node name="TemperatureLabel" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer2" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer3" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_HUMIDITY"
fit_content = true
autowrap_mode = 0

[node name="HumidityLabel" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer3" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer4" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_ROTATION"
fit_content = true
autowrap_mode = 0

[node name="RotationLabel" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer4" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer" index="4"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer5" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_POLLUTION"
fit_content = true
autowrap_mode = 0

[node name="PollutionLabel" type="RichTextLabel" parent="SubViewport/MarginContainer2/VSplitContainer/VBoxContainer/HBoxContainer5" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="ColorRect" type="ColorRect" parent="SubViewport" index="2"]
material = SubResource("ShaderMaterial_kpf10")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Camera3D" type="Camera3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 0.911338, 0.411658, 0, -0.411658, 0.911338, 0, 0.870147, 0.272076)

[node name="DebugUI" type="Node" parent="." index="4"]

[node name="MarginContainer" type="MarginContainer" parent="DebugUI" index="0"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VSplitContainer" type="VSplitContainer" parent="DebugUI/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RichTextLabel" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer" index="0"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "#===============================#
#	Island Information System	#
#===============================#"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI/MarginContainer/VSplitContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_TIME"
fit_content = true
autowrap_mode = 0

[node name="TimeLabel" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer2" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_TEMPERATURE"
fit_content = true
autowrap_mode = 0

[node name="TemperatureLabel" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer2" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer3" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_HUMIDITY"
fit_content = true
autowrap_mode = 0

[node name="HumidityLabel" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer3" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer4" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_ROTATION"
fit_content = true
autowrap_mode = 0

[node name="RotationLabel" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer4" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer" index="4"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer5" index="0"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "SCREEN_TERMINAL_POLLUTION"
fit_content = true
autowrap_mode = 0

[node name="PollutionLabel" type="RichTextLabel" parent="DebugUI/MarginContainer/VSplitContainer/VBoxContainer/HBoxContainer5" index="1"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_5sy7i")
theme_override_colors/default_color = Color(0.223529, 1, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_mfid3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
